--- a/SistemaServicioSocial/SistemaServicioSocial-war/web/resources/css/cssLayout.css
+++ b/SistemaServicioSocial/SistemaServicioSocial-war/web/resources/css/cssLayout.css
@@ -1,24 +1,48 @@
 
+.ui-menubar,.ui-menu-child,.ui-menu {
+    background: transparent;
+    border: transparent;
+}
+
 #top {
     position: relative;
-    background-color: #036fab;
+    background-color: #292b2c;
     color: white;
     padding: 5px;
     margin: 0px 0px 10px 0px;
 }
 
+
+#top2 {
+    /*    position: relative;
+        background-color: #292b2c;
+        color: white;
+        padding: 5px;
+        margin: 0px 0px 10px 0px;*/
+}
+
 #bottom {
     position: relative;
-    background-color: #c2dfef;
+    background-color: #292b2c;
     padding: 5px;
     margin: 10px 0px 0px 0px;
 }
 
 #left {
+    /*    float: left;
+        bottom: 0px;
+        position: relative;
+        background-color: #292b2c;
+        background-repeat: repeat-y;
+        padding: 15px;
+        width: 200px;*/
+}
+
+#left2 {
     float: left;
-    background-color: #ece3a5;
+    /*    background-color: #292b2c;*/
     padding: 5px;
-    width: 150px;
+    max-width: 800px;
 }
 
 #right {
@@ -26,6 +50,13 @@
     background-color: #ece3a5;
     padding: 5px;
     width: 150px;
+}
+
+#content2 {
+    padding: 50px;
+    float: right;       
+    max-width: 950px;
+    margin: 0px 0px 10px 10px;
 }
 
 .center_content {
@@ -47,15 +78,123 @@
 }
 
 #top a:link, #top a:visited {
-  color: white;
-  font-weight : bold;
-  text-decoration: none;
+    color: white;
+    font-weight : bold;
+    text-decoration: none;
 }
 
 #top a:link:hover, #top a:visited:hover  {
-  color: black;
-  font-weight : bold;
-  text-decoration : underline;
+    color: black;
+    font-weight : bold;
+    text-decoration : underline;
 }
 
 
+.sub-header {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+}
+.navbar-fixed-top {
+    border: 0 none;
+}
+.sidebar {
+    display: none;
+}
+@media (min-width: 768px) {
+    .navbar {
+        border-radius: 0px;
+        padding-bottom: 2px;
+        padding-top: 2px;
+        background-repeat: repeat-x;
+        left: 0;
+        position: fixed;
+        right: 0;
+        z-index: 1030;
+    }
+    .sidebar {
+        background-color: #292b2c;
+        border-right: 0px solid #292b2c;
+        bottom: 0;
+        display: block;
+        left: 0;
+        overflow-x: hidden;
+        overflow-y: auto;
+        padding: 20px;
+        position: fixed;
+        top: 52px;
+        z-index: 1000;
+    }
+}
+.nav-list {
+    margin-bottom: 20px;
+    margin-left: -20px;
+    margin-right: -21px;
+}
+.nav-list > li > a {
+    padding-left: 20px;
+    padding-right: 20px;
+    color: darkgrey;
+}
+.panel {
+    background-color: #292b2c;
+}
+
+.panel-default > .panel-heading{
+    background-color: #292b2c;
+    color:darkgray;
+    border-color: #292b2c;
+}
+
+.panel-default {
+    border-color: #292b2c;
+}
+
+.panel-default > .panel-heading + .panel-collapse > .panel-body{
+    background-color: #292b2c;
+    color: white;
+    border-color: #292b2c;
+}
+
+.panel-title{
+    font-size: 14px;
+}
+
+.nav > li > a:hover, .nav > li > a:focus{
+    background-color: black;
+    color: white;
+}
+
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus{
+    background-color: black;
+    color: white;
+}
+.nav-list > .active > a, .nav-sidebar > .active > a:hover, .nav-sidebar > .active > a:focus {
+    background-color: black;
+    color: white;
+}
+.main {
+    padding: 20px;
+}
+@media (min-width: 768px) {
+    .main {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+}
+.main .page-header {
+    margin-top: 0;
+}
+.placeholders {
+    margin-bottom: 30px;
+    text-align: center;
+}
+.placeholders h4 {
+    margin-bottom: 0;
+}
+.placeholder {
+    margin-bottom: 20px;
+}
+.placeholder img {
+    border-radius: 50%;
+    display: inline-block;
+}
